--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         container_name: nt_coordinates_resolver_php
 
     nginx:
-        image: nginx:1.15.8-alpine
+        image: nginx:1.25-alpine
         ports:
             - 127.0.0.1:${NGINX_PORT}:80
         volumes:
@@ -18,7 +18,8 @@ services:
         container_name: nt_coordinates_resolver_nginx
 
     mysql:
-        image: mysql:5.7
+        image: mysql:8.2
+        platform: linux/x86_64
         volumes:
             - ./docker/mysql/data:/var/lib/mysql:cached
         ports:
