--- a/.env.dist
+++ b/.env.dist
@@ -18,3 +18,5 @@ DATABASE_URL="mysql://root:root@nt_coordinates_resolver_mysql:3306/coordinates_r
 GOOGLE_GEOCODING_API_KEY=xxxxxx
 HEREMAPS_GEOCODING_API_KEY=xxxxxx
 ###< geocoding keys ###
+
+COORDINATES_CACHE_VALIDITY_IN_MINUTES=600
