--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.41",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-doctrine": "^1.3",
         "roave/security-advisories": "dev-latest",
         "symfony/maker-bundle": "^1.33"
     },
@@ -37,7 +40,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Tools\\": "tools/"
         }
     },
     "autoload-dev": {
@@ -48,7 +52,7 @@
     "replace": {
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*"
+        "symfony/polyfill-php82": "*"
     },
     "scripts": {
         "auto-scripts": {
