--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 .idea
-.env
 docker
-
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -17,3 +15,13 @@ docker
 /.php-cs-fixer.php
 /.php-cs-fixer.cache
 ###< friendsofphp/php-cs-fixer ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
