--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,16 @@
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "dg/bypass-finals": "^1.5",
         "friendsofphp/php-cs-fixer": "^3.41",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-doctrine": "^1.3",
+        "phpunit/phpunit": "^10.5",
         "roave/security-advisories": "dev-latest",
-        "symfony/maker-bundle": "^1.33"
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "5.4.*",
+        "symfony/maker-bundle": "^1.33",
+        "symfony/phpunit-bridge": "^7.0"
     },
     "config": {
         "optimize-autoloader": true,
