--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,16 @@
         "doctrine/orm": "^2.8",
         "guzzlehttp/guzzle": "^7.0",
         "nelmio/api-doc-bundle": "^4.11",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/intl": "5.4.*",
+        "symfony/property-access": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
+        "symfony/serializer": "5.4.*",
+        "symfony/validator": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
