--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 .idea
-.env
 docker
-
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -12,3 +10,18 @@ docker
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
