--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^7.0",
         "nelmio/api-doc-bundle": "^4.11",
         "sensio/framework-extra-bundle": "^6.2",
+        "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.3.1",
@@ -24,8 +25,11 @@
         "symfony/property-access": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/serializer": "5.4.*",
+        "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/yaml": "5.4.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "dg/bypass-finals": "^1.5",
