--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "require-dev": {
         "dg/bypass-finals": "^1.5",
         "friendsofphp/php-cs-fixer": "^3.41",
+        "hautelook/alice-bundle": "^2.12",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpunit/phpunit": "^10.5",
